# wordapp

./: .gitignore  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint-and-test.yaml
applications/backend/: .flake8  .gitignore  Makefile  pyproject.toml
applications/backend/new_src/api/: dependencies.py
applications/backend/new_src/api/routers/: decks.py  items.py  login.py  tests.py  users.py
applications/backend/new_src/api/schemas/: __init__.py  deck_schema.py  decks_schema.py  item_schema.py  items_schema.py  tests_schema.py  users_schema.py
applications/backend/new_src/core/: config.py  main.py  security.py  sequrity.py
applications/backend/new_src/db/: data_models.py
applications/backend/new_src/db/repositories/: base_repository.py  deck_repository.py  item_repository.py  test_item_repository.py  test_repository.py  user_repository.py
applications/backend/old_src/: app.py  routers.py
applications/backend/old_src/adapter/controller/: test_controller.py
applications/backend/old_src/adapter/gateway/: __init__.py  rdb_gateway.py
applications/backend/old_src/domain/dto/: __init__.py
applications/backend/old_src/domain/entity/: item_entity.py
applications/backend/old_src/frameworks/: postgres_base.py
applications/backend/old_src/frameworks/postgres/: item_table.py
applications/backend/old_src/usecase/interactor/: deck_usecase.py  test_usecase.py
applications/backend/old_src/utils/: db_utils.py  logger_utils.py
applications/backend/src/: app.py  routers.py
applications/backend/src/adapter/controller/: __init__.py  item_controller.py  test_controller.py
applications/backend/src/adapter/gateway/: __init__.py  rdb_gateway.py
applications/backend/src/api/: dependencies.py
applications/backend/src/api/routers/: decks.py  items.py  login.py  quizzes.py  tests.py  users.py
applications/backend/src/api/schemas/: __init__.py  decks_schema.py  items_schema.py  login_schema.py  quizzes_schema.py  tests_schema.py  users_schema.py
applications/backend/src/core/: config.py  main.py  security.py
applications/backend/src/db/: data_models.py  sqlalchemy_data_models.py
applications/backend/src/db/models/: sqlalchemy_data_models.py
applications/backend/src/db/repositories/: base_repository.py  base_repository_interface.py  deck_repository.py  deck_repository_interface.py  item_repository.py  item_repository_interface.py  quiz_item_repository_interface.py  quiz_repository_interface.py  repository_interface.py  test_item_repository.py  test_repository.py  user_repository.py  user_repository_interface.py
applications/backend/src/db/repositories/sqlalchemy/: base_repository.py  deck_repository.py  item_repository.py  quiz_item_repository.py  quiz_repository.py  test_item_repository.py  test_repository.py  user_repository.py
applications/backend/src/domain/: __init__.py
applications/backend/src/domain/dto/: __init__.py  item_dto.py
applications/backend/src/domain/entity/: __init__.py  item_entity.py
applications/backend/src/domain/models/: __init__.py  base_model.py  deck_model.py  item_model.py  quiz_model.py  test_model.py  user_model.py
applications/backend/src/frameworks/: __init__.py  postgres.py  postgres_base.py
applications/backend/src/frameworks/postgres/: __init__.py  item_table.py
applications/backend/src/scripts/: init_db.py
applications/backend/src/usecase/interactor/: __init__.py  deck_usecase.py  test_usecase.py
applications/backend/src/utils/: __init__.py  db_utils.py  logger_utils.py
applications/backend/tests/: conftest.py  utils.py
applications/backend/tests/integration/: conftest.py
applications/backend/tests/integration/api/routers/: test_decks.py
applications/backend/tests/integration/db/repositories/sqlalchemy/: test_base_repository.py  test_deck_repository.py  test_item_repository.py  test_quiz_item_repository.py  test_quiz_repository.py  test_user_repository.py
applications/backend/tests/src/: test_decks.py  utils.py
applications/backend/tests/src/integration/: conftest.py
applications/backend/tests/src/unit/: conftest.py  test_decks.py
applications/backend/tests/src/unit/db/repositories/sqlalchemy/: test_deck_repository.py  test_item_repository.py  test_quiz_item_repository.py  test_quiz_repository.py  test_user_repository.py
applications/backend/tests/unit/db/repositories/sqlalchemy/: test_base_repository.py  test_deck_repository.py  test_item_repository.py  test_quiz_item_repository.py  test_quiz_repository.py  test_user_repository.py
applications/frontend/: package-lock.json  package.json
applications/frontend/src/: App.jsx  Root.jsx  index.js
applications/frontend/src/api/: event.js  index.js
applications/frontend/src/components/AnswerButton/: AnswerButton.jsx  index.js
applications/frontend/src/components/Result/: Result.jsx
applications/frontend/src/theme/: index.js  styles.js
db/: README.md
db/init/: init.sql  sokutan.csv
environments/: .env.backend.sample  .env.sample  Dockerfile  Dockerfile.backend  Dockerfile.frontend  docker-compose.yaml
environments/ci/: docker-compose.yaml
environments/cpu/: .env  docker-compose.yaml
src/: db.sqlite3  manage.py
src/quiz/: __init__.py  admin.py  models.py  urls.py  views.py
src/quiz/migrations/: 0001_initial.py
src/quiz/pyfiles/: __init__.py  maketest.py
src/quiz/templates/quiz/: base.html  genra.html  mode.html  result.html  solve.html  start_page.html  top_page.html  wordlevel.html
src/wordapp/: asgi.py  settings.py  urls.py  wsgi.py
(+31 files in other folders)
