[tool.poetry]
name = "wordapp"
version = "0.1.0"
description = ""
authors = ["botany <yoshikikubotani.lab@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.3"
pandas = "^1.5.1"
numpy = "^1.23.4"
mysqlclient = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
